        fixed-width integer types, in rpcap code.
      Remove an always-false pointer test from snf_read().
      Clean up DECnet address handling.
      struct pcap: Update buffer type from "void *" to "u_char *".
      Remove dead code that supported SITA ACN devices.
      Remove the TODO file.
      Merge four header files into gencode.c.
    Link-layer types:
      Add LINKTYPE_ETW/DLT_ETW.
      Add LINKTYPE_NETANALYZER_NG/DLT_NETANALYZER_NG (pull request
        #1008).
      Add LINKTYPE_ZBOSS_NCP/DLT_ZBOSS_NCP.
      Add LINKTYPE_USB_2_0_LOW_SPEED/DLT_USB_2_0_LOW_SPEED,
        LINKTYPE_USB_2_0_FULL_SPEED/DLT_USB_2_0_FULL_SPEED,
        LINKTYPE_USB_2_0_HIGH_SPEED/DLT_USB_2_0_HIGH_SPEED
      Add LINKTYPE_AUERSWALD_LOG/DLT_AUERSWALD_LOG.
      Add LINKTYPE_ZWAVE_TAP/DLT_ZWAVE_TAP.
      Add LINKTYPE_SILABS_DEBUG_CHANNEL/DLT_SILABS_DEBUG_CHANNEL.
      Add LINKTYPE_FIRA_UCI/DLT_FIRA_UCI.
      Rename LINKTYPE_IPMB_LINUX/DLT_IPMB_LINUX to
        LINKTYPE_I2C_LINUX/DLT_I2C_LINUX, as it's really just an
        encapsulation of I2C, and is also being used for HDMI DDC.
        Keep DLT_IPMB_LINUX around as a #define for backwards
        compatibility.
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
      Deprecate pcap_compile_nopcap().
      Add support for filtering packets encapsulated with VXLAN (pull
        request #1273).
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
      rpcapd: Refine SSL options in printusage().
      Fix a possible buffer overflow (Coverity CID 1619148).
    Documentation:
      Document a standard format for writing out BPF filter programs.
      Add a README.hurd.md file.
      Explain "any" device better in pcap_create(3PCAP).
      Cross-reference some man pages better.